[gd_scene load_steps=4 format=3 uid="uid://balidpllhk6xc"]

[ext_resource type="Script" path="res://Scripts/Menus_Scripts/weapons_menu.gd" id="1_bijso"]
[ext_resource type="Texture2D" uid="uid://lvtxd4roawfo" path="res://Assets/Effects_art/panel_rect.png" id="2_6p723"]
[ext_resource type="Texture2D" uid="uid://bxql25fvds0de" path="res://Assets/Weapons_Art/Wooden_Sword_Weapon.png" id="3_a32u7"]

[node name="Weapons_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bijso")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -25.0
offset_top = -17.0
offset_right = 1164.0
offset_bottom = 667.0
color = Color(0.492416, 0.658999, 0.893626, 1)

[node name="Go_Back_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1067.0
offset_top = 7.0
offset_right = 1139.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40
text = "X"

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = -7.0
offset_right = 1059.0
offset_bottom = 101.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
text = "[center]Weapons[/center]"

[node name="Coin" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 811.0
offset_top = 6.0
offset_right = 1063.0
offset_bottom = 114.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[right]coin[/right]"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 121.0
offset_right = 1118.0
offset_bottom = 624.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel1" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_6p723")

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/VBoxContainer/Panel1"]
position = Vector2(59, 72)
scale = Vector2(0.401111, 0.401111)
texture = ExtResource("3_a32u7")

[node name="BaseText" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/Panel1"]
layout_mode = 0
offset_left = 126.0
offset_top = 17.0
offset_right = 448.0
offset_bottom = 128.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Wooden Sword
Sell value = 10"

[node name="Text1" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/Panel1"]
layout_mode = 0
offset_left = 127.0
offset_top = 95.0
offset_right = 374.0
offset_bottom = 141.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Owned[0]"

[node name="Button1" type="Button" parent="ScrollContainer/VBoxContainer/Panel1"]
offset_left = 780.0
offset_top = 23.0
offset_right = 1080.0
offset_bottom = 114.0
theme_override_font_sizes/font_size = 45
text = "Unavailable"

[connection signal="button_up" from="Go_Back_Button" to="." method="_on_go_back_button_button_up"]
